fix: Change toast-container to use margin so context menu is accessible and change toast-container to a more purposeful z-index so the context menu can overlap messages

--- a/addon/styles/_flash-messages.scss
+++ b/addon/styles/_flash-messages.scss
@@ -1,9 +1,14 @@
 .nrg-application {
   .toast-container {
-    padding-top: $appbar-height;
+    margin-top: $appbar-height;
 
     .ui.ui.progress.error .bar {
       background-color: #541212;
     }
   }
+}
+
+.ui.toast-container {
+  position: fixed;
+  z-index: 50;
 }
